# ohtu-2021-2ndrepo

login-robot/src/tests/: login.robot
nhl-reader/src/: index.py  player.py
nhl-statistics-1/src/: index.py  statistics.py
nhl-statistics-1/src/tests/: pisteporssi_test.py
poetry-web/: pyproject.toml
project-reader/: pyproject.toml
project-reader/src/: project_reader.py
verkkokauppa-1/src/: index.py  kauppa.py  kirjanpito.py  pankki.py  varasto.py
