[tool.poetry]
name = "teht1"
version = "0.1.0"
description = "tehtava"
authors = ["Topi Pärssinen <parssinentopi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
toml-python = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
